# totali

./: .coverage  .gitignore  AGENTS.md  OPTIMIZATION_PLAN.md  PROJECT_OUTLINE.md  README.md  ROADMAP.md  TOTaLi_Drafting_Proposal.docx  TOTaLi_Drafting_Whitepaper.docx  TOTaLi_Drafting_Whitepaper_20260225_203421.docx  Where Hybrid Survey Automation Still Breaks_ Model Risk, Reproducibility, and Trust Anchors.docx  benchmark_extractor.py  benchmark_extractor_v2.py  benchmark_extractor_v3.py  benchmark_extractor_v4.py  benchmark_logic.py  changes_summary.txt  extractor.patch  full_diff.txt  orchestrator_fix.diff  patch.py  report.json  requirements-test.txt  requirements.txt  run_training_pipeline.py  setup.py  test_benchmark.py  update_extractor.py  verify_data_flow.py
groundtruthos-data/: .gitignore  main.py  pyproject.toml
groundtruthos-data/compliance/: compliance_log.py
groundtruthos-data/config/: __init__.py  pdal_pipeline_template.json  sources.yaml
groundtruthos-data/downloader/: bulk_downloader.py  client.py  metadata.py  normalizer.py  registry.py  tile_listing.py  tiler.py  validator.py
groundtruthos-data/pipeline/: Makefile  decimation.py  features.py  postgis_copc_postpatch_sql.sql  run_pdal_batch.py  telemetry.py  tiling.py
groundtruthos-data/schema/: 001_core_registry.sql  002_feature_store.sql  003_knowledge_graph.sql
groundtruthos-data/scripts/: init_postgres.sql  migrate.py
groundtruthos-data/storage/: layout.py  registry.py
groundtruthos-data/survey-automation/: .gitignore  .local-datasets  CHANGELOG.md  README.md  pyproject.toml
groundtruthos-data/survey-automation/config/: bridge_rules.example.yaml  pipeline.ci.yaml  pipeline.example.yaml  pipeline.prod.yaml  umbrella_project_manifest.json
groundtruthos-data/survey-automation/docs/: crd-converter.md  deterministic-intent-geometry-bridge.md  operations.md  release-candidate-checklist.md  release-notes-v2.0.0.md  v2-concurrent-execution.md  v2-warning-hotspots.md
laser-suite/: README.md  pyproject.toml
laser-suite/config/: pipeline.example.yaml  pipeline.prod.yaml
laser-suite/docs/: civil3d-bridge.md  contracts.md  formulas.md  references.md
(+268 files in other folders)
